--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
   "name": "jsmodels",
   "version": "0.0.1",
-  "maintainers": [{
-    "name": "Mykhailo Stadnyk",
-    "email": "mikhus@gmail.com"
-  }]
+  "maintainers": [
+    {
+      "name": "Mykhailo Stadnyk",
+      "email": "mikhus@gmail.com"
+    }
+  ],
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "gulp": "^3.9.1",
+    "istanbul": "^0.4.3",
+    "mocha": "^2.5.3",
+    "sinon": "^1.17.4"
+  },
+  "scripts": {
+    "test": "istanbul cover node_modules/mocha/bin/_mocha"
+  }
 }
