--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gulp-mocha": "^2.2.0",
     "istanbul": "^0.4.3",
     "mocha": "^2.5.3",
-    "sinon": "^1.17.4"
+    "sinon": "^1.17.4",
+    "vm": "^0.1.0"
   },
   "scripts": {
     "test": "gulp test"
