--- a/package.json
+++ b/package.json
@@ -8,15 +8,35 @@
     }
   ],
   "devDependencies": {
+    "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.1",
+    "browserify-istanbul": "^2.0.0",
     "chai": "^3.5.0",
+    "chalk": "^1.1.3",
     "eslint": "^2.12.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
     "gulp-istanbul": "^1.0.0",
     "gulp-mocha": "^2.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.4",
+    "gulp-util": "^3.0.7",
     "istanbul": "^0.4.3",
+    "karma": "^1.1.0",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-browserify": "^5.0.5",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-mocha": "^1.1.1",
+    "karma-sinon": "^1.0.5",
     "mocha": "^2.5.3",
     "sinon": "^1.17.4",
+    "utils-merge": "^1.0.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
     "vm": "^0.1.0"
   },
   "scripts": {
