--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 sudo: required
-dist: wily
+dist: trusty
 addons:
   apt:
     sources:
       - google-chrome
     packages:
-      - google-chrome-stable
+      - google-chrome-beta
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
