--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ addons:
       - google-chrome
     packages:
       - google-chrome-beta
+before_install:
+  - sudo apt-get update -qq
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
