Model sync implementation started

--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
   "scripts": {
     "test": "gulp test"
   },
-  "main": "index.js"
+  "main": "index.js",
+  "dependencies": {
+    "ws": "^1.1.1"
+  }
 }
