--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
   },
   "main": "index.js",
   "dependencies": {
+    "bufferutil": "^1.2.1",
     "firebase": "^3.1.0",
+    "utf-8-validate": "^1.2.1",
     "ws": "^1.1.1"
   }
 }
