--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^2.12.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
+    "gulp-help-doc": "^1.0.4",
     "gulp-istanbul": "^1.0.0",
     "gulp-mocha": "^2.2.0",
     "gulp-rename": "^1.2.2",
