--- a/package.json
+++ b/package.json
@@ -45,10 +45,5 @@
     "test": "gulp test:node"
   },
   "main": "index.js",
-  "dependencies": {
-    "bufferutil": "^1.2.1",
-    "firebase": "^3.1.0",
-    "utf-8-validate": "^1.2.1",
-    "ws": "^1.1.1"
-  }
+  "dependencies": {}
 }
